2008-07-29  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c: expose Cairo::Context#destroy.

2008-07-21  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (cr_set_source_generic): accept surface
	without width and height.

2008-07-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.c: 1.6.3 -> 1.7.0.

	* NEWS: add a new entry for 1.6.3.

	* src/rb_cairo.c: 1.7.0 -> 1.6.3.

2008-06-20  Kouhei Sutou  <kou@cozmixng.org>

	* README: update OBATA Akio's entry.

	* src/depend (install-so): use INSTALL_DATA and RUBYARCHDIR.
	Suggested by OBATA Akio. Thanks!!!

	* pkg-config.rb: add libdata.

	* pkg-config.rb:
	- add /opt/local/lib/pkgconfig as default path.
	- improve default path guess.
	Suggested by Carsten Bormann. Thanks!!!

	* README: add Carsten Bormann to thanks list. Thanks!!!

	* test/test_surface.rb: add.

	* src/rb_cairo_surface.c (yield_and_finish): don't finish if it
	isn't needed.

	* src/rb_cairo_surface.c: finish all guarded surfaces at end.

2008-06-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/: use #ifdef for CAIRO_HAS_*.

	* src/rb_cairo_surface.c: guard custom write surfaces from GC to
	avoid writing in GC.
	Reported by James Healy. Thanks!!!

	* README: add James Healy to Thanks list.

	* pkg-config.rb (PackageConfig#guess_default_path): add
	/usr/share/pkgconfig to default path.
	Suggested by James Healy. Thanks!!!

2008-06-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.c: 1.6.2 -> 1.7.0.

	* Rakefile: don't clean on release target to keep generated document.

	* src/rb_cairo_surface.c: rename OpenFile before include rubyio.h.

	* NEWS: add an entry for 1.6.2.

	* pkg-config.rb: work with ruby 1.9.

	* src/rb_cairo.c: 1.7.0 -> 1.6.2.

2008-06-13  Kouhei Sutou  <kou@cozmixng.org>

	* pkg-config.rb: add PREFIX/lib64/pkgconfig to default path list.

2008-06-12  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: include <ruby.h>.

	* src/rb_cairo_private.h: add fallback RARRAY_PTR and RARRAY_LEN.
