@@ -62,7 +62,9 @@ Thanks
 
   * Yoshinao Muramatsu: win32 surface support patch.
   * NANKI Haruo: some bug fix patches.
-  * Paul van Tilburg: some patches that support ruby 1.9.
+  * Paul van Tilburg:
+    - some patches that support ruby 1.9.
+    - some suggestions.
   * Binzo: some bug reports and fixed that.
   * kimura wataru:
     - some advices for RubyCocoa.
